--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,25 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
                   </execution>
               </executions>
           </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>de.elbosso.scratch.mortennobel.mandelbrot.Mandelbrot</mainClass>
+                    <!--arguments>
+                        <argument>foo</argument>
+                        <argument>bar</argument>
+                    </arguments-->
+                </configuration>
+            </plugin>
       </plugins>
     </build>
     <properties>
