--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
         <project.build.outputEncoding>${project.custom.encoding}</project.build.outputEncoding>
         <project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
       <project.scm.id>elbossos-github</project.scm.id>
+        <elbosso.artifacts.version>1.3.0</elbosso.artifacts.version>
     </properties>
   <build>
         <pluginManagement>
@@ -137,7 +138,7 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
       </plugins>
     </build>
     <repositories>
-        <repository>
+        <!--repository>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
@@ -158,6 +159,11 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
             <name>Juergen Key</name>
             <url>https://elbosso.github.io/maven2-releases</url>
             <layout>default</layout>
+        </repository-->
+        <repository>
+            <id>repsy</id>
+            <name>EL BOSSOs (https://elbosso.github.io/index.html) Maven Repository on Repsy</name>
+            <url>https://repo.repsy.io/mvn/elbosso/default</url>
         </repository>
         <repository>
             <id>central</id>
@@ -176,37 +182,37 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>util</artifactId>
-            <version>1.2.0</version>
+            <version>${elbosso.artifacts.version}</version>
 			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>documents</artifactId>
-            <version>1.2.0</version>
+            <version>${elbosso.artifacts.version}</version>
 			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>util_annotations</artifactId>
-            <version>1.2.0</version>
+            <version>${elbosso.artifacts.version}</version>
 			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>data</artifactId>
-            <version>1.2.0</version>
+            <version>${elbosso.artifacts.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>custommaterialgfx</artifactId>
-            <version>1.2.0</version>
+            <version>${elbosso.artifacts.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>materialgfx</artifactId>
-            <version>1.2.0</version>
+            <version>${elbosso.artifacts.version}</version>
         </dependency>
 		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
