--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,14 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
 
     <properties>
         <project.custom.encoding>UTF-8</project.custom.encoding>
-        <project.custom.java.version>1.6</project.custom.java.version>
+        <project.custom.java.version>11</project.custom.java.version>
         <maven.compiler.source>${project.custom.java.version}</maven.compiler.source>
         <maven.compiler.target>${project.custom.java.version}</maven.compiler.target>
         <project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
         <project.build.outputEncoding>${project.custom.encoding}</project.build.outputEncoding>
         <project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
       <project.scm.id>elbossos-github</project.scm.id>
-        <elbosso.artifacts.version>1.3.0</elbosso.artifacts.version>
+        <elbosso.artifacts.version>1.8.0</elbosso.artifacts.version>
     </properties>
   <build>
         <pluginManagement>
@@ -56,9 +56,9 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                      <source>9</source>
-                      <target>9</target>
-                      <compilerVersion>9</compilerVersion>    
+                        <source>${project.custom.java.version}</source>
+                        <!--target>${project.custom.java.version}</target-->
+                        <compilerVersion>${project.custom.java.version}</compilerVersion>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -178,48 +178,53 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
 		  <url>	https://repo.boundlessgeo.com/main/</url>
 		</repository>
     </repositories>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>de.elbosso</groupId>
+                <artifactId>bom</artifactId>
+                <version>${elbosso.artifacts.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>util</artifactId>
-            <version>${elbosso.artifacts.version}</version>
+            
 			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>documents</artifactId>
-            <version>${elbosso.artifacts.version}</version>
+            
 			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>util_annotations</artifactId>
-            <version>${elbosso.artifacts.version}</version>
+            
 			<scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>data</artifactId>
-            <version>${elbosso.artifacts.version}</version>
+            
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>custommaterialgfx</artifactId>
-            <version>${elbosso.artifacts.version}</version>
+            
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.elbosso</groupId>
             <artifactId>materialgfx</artifactId>
-            <version>${elbosso.artifacts.version}</version>
+            
         </dependency>
-		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
 
     <dependency>
       <groupId>org.jogamp.gluegen</groupId>
@@ -231,6 +236,12 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
       <artifactId>jogl-all-main</artifactId>
       <version>2.3.2</version>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
     </dependencies>
     <distributionManagement>
         <repository>
