--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@ WENN SIE AUF DIE MOEGLICHKEIT EINES SOLCHEN SCHADENS HINGEWIESEN WORDEN SIND.
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.elbosso</groupId>
   <artifactId>Mandelbrot</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
     <scm>
         <developerConnection>scm:git:https://github.com/elbosso/mandelbrot.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>Mandelbrot-1.1.0</tag>
   </scm>
 
     <properties>
